# napari-yolo5-mitosis-detector

./: .gitattributes  README.md  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_yolo5_mitosis_detector/: __init__.py  _widget.py  core.py  napari.yaml  post_process.py
src/napari_yolo5_mitosis_detector/.models/Yolo5/mito-nuclei-detection/: opt.yaml
src/napari_yolo5_mitosis_detector/_models/Yolo5/mito-nuclei-detection/weights/: best.pt
src/napari_yolo5_mitosis_detector/_tests/: test_4d_im.tif  test_core.py  test_widget.py
