[metadata]
name = napari-yolo5-mitosis-detector
version = attr: napari_yolo5_mitosis_detector.__version__
description = A simple plugin to use yolo5 for mitosis detection with napari
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TPoquillon/napari-yolo5-mitosis-detector
author = Titouan Poquillon
author_email = titouan.poquillon@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/TPoquillon/napari-yolo5-mitosis-detector/issues
    Documentation = https://github.com/TPoquillon/napari-yolo5-mitosis-detector#README.md
    Source Code = https://github.com/TPoquillon/napari-yolo5-mitosis-detector
    User Support = https://github.com/TPoquillon/napari-yolo5-mitosis-detector/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    scikit-image
    opencv-python
    torch
    torchvision
    torchaudio
    ultralytics
    shapely

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-yolo5-mitosis-detector = napari_yolo5_mitosis_detector:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
